# CubiEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RunBuild.Bat  Setup.bat  vs-chromium-project.txt
Assets/Textures/: GrayFurnace.hdr  WhiteFurnace.hdr
CubiEngine/: CMakeLists.txt  Main.cpp
CubiEngine/Include/: CubiMath.h  Pch.h  Utils.h
CubiEngine/Include/Core/: Application.h  Editor.h  FileSystem.h  Input.h
CubiEngine/Include/Denoiser/: OIDenoiser.h
CubiEngine/Include/Graphics/: CommandQueue.h  ComputeContext.h  Context.h  CopyContext.h  D3D12DynamicRHI.h  DescriptorHeap.h  Dx12Helper.h  GraphicsContext.h  GraphicsDevice.h  Material.h  MemoryAllocator.h  MipmapGenerator.h  PipelineState.h  Profiler.h  Query.h  Raytracing.h  RaytracingPipelineState.h  Resource.cpp  Resource.h  ShaderBindingTable.h  ShaderBindingTableGenerator.h  ShaderCompiler.h  TextureManager.h
CubiEngine/Include/Math/: CubiMath.h  Transform.h
CubiEngine/Include/Renderer/: BloomPass.h  CubeMap.h  DebugPass.h  DeferredGPass.h  DenoisePass.h  EyeAdaptationPass.h  PathTracing.h  PostProcess.h  RaytracingDebugScenePass.h  RaytracingShadowPass.h  RenderPass.h  Renderer.h  SSAO.h  ScreenSpaceGI.h  ShadowDepthPass.h  TemporalAA.h  UnlitPass.h
CubiEngine/Include/Scene/: Camera.h  CubeMesh.h  FBXLoader.h  GLTFModelLoader.h  Light.h  Mesh.h  Model.h  Renderer.h  Scene.h  SceneLoader.h  SphereMesh.h
CubiEngine/Source/: CubiMath.cpp
CubiEngine/Source/Core/: Application.cpp  Editor.cpp  FileSystem.cpp  Input.cpp
CubiEngine/Source/Denoiser/: OIDenoiser.cpp
CubiEngine/Source/Graphics/: CommandQueue.cpp  ComputeContext.cpp  Context.cpp  CopyContext.cpp  D3D12DynamicRHI.cpp  DescriptorHeap.cpp  Dx12Helper.cpp  GraphicsContext.cpp  GraphicsDevice.cpp  MemoryAllocator.cpp  MipmapGenerator.cpp  PipelineState.cpp  Profiler.cpp  Query.cpp  Raytracing.cpp  RaytracingPipelineState.cpp  Resource.cpp  ShaderBindingTable.cpp  ShaderBindingTableGenerator.cpp  ShaderCompiler.cpp  TextureManager.cpp
CubiEngine/Source/Math/: CubiMath.cpp  Transform.cpp
CubiEngine/Source/Renderer/: BloomPass.cpp  CubeMap.cpp  DebugPass.cpp  DeferredGPass.cpp  DenoisePass.cpp  EyeAdaptationPass.cpp  PathTracing.cpp  PostProcess.cpp  RaytracingDebugScenePass.cpp  RaytracingShadowPass.cpp  RenderPass.cpp  Renderer.cpp  SSAO.cpp  ScreenSpaceGI.cpp  ShadowDepthPass.cpp  TemporalAA.cpp  UnlitPass.cpp
CubiEngine/Source/Scene/: Camera.cpp  CubeMesh.cpp  FBXLoader.cpp  GLTFModelLoader.cpp  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  SceneLoader.cpp  SphereMesh.cpp
Shaders/: Triangle.hlsl  Utils.hlsli
Shaders/Common/: DownSample.hlsl  GaussianBlur.hlsl  GaussianBlurW.hlsl  UpSample.hlsl
Shaders/CubeMap/: ConvertEquirectToCubeMap.hlsl  GenerateBRDFLutCS.hlsl  GenerateIrradianceMap.hlsl  GeneratePrefilteredCubemapCS.hlsl  ScreenSpaceCubemap.hlsl
Shaders/EyeAdaptation/: CalculateAverageLuminance.hlsl  GenerateHistogram.hlsl  Tonemapping.hlsl
Shaders/Mipmap/: GenerateCubemapMipmapCS.hlsl  GenerateMipmapCS.hlsl
Shaders/PostProcess/: Copy.hlsl  DebugVisualize.hlsl  DebugVisualizeCubeMap.hlsl  DebugVisualizeDepth.hlsl  TemporalAAResolve.hlsl  TemporalAAUpdateHistory.hlsl  Tonemapping.hlsl
Shaders/Raytracing/: Common.hlsl  DebugScene.hlsl  PathTracing.hlsl  RaytracingShadow.hlsl  RaytracingUtils.hlsli  Shadow.hlsl
Shaders/RenderPass/: DeferredGPass.hlsl  DeferredGPassCube.hlsl  DeferredLightingPBR.hlsl  ShadowDepthPass.hlsl  UnlitPass.hlsl  VSMShadowDepthPass.hlsl
Shaders/SSAO/: SSAO.hlsl
Shaders/ScreenSpaceGI/: CompositionSSGI.hlsl  GenerateStochasticNormal.hlsl  RaycastDiffuse.hlsl  SSGIResolve.hlsl  SSGIUpdateHistory.hlsl
Shaders/ShaderInterlop/: Common.hlsli  ConstantBuffers.hlsli  RenderResources.hlsli
Shaders/Shading/: BRDF.hlsli  Sampling.hlsli
Shaders/Shadow/: Shadow.hlsl  VSMMomentPass.hlsl
